--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="logo"><img src="" alt="" /></div>
+    <div class="logo"><img src="Logo.png" alt="" /></div>
     <div class="container">
       <div class="info-section">
         <h1>For Individuals</h1>
