--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="logo"><img src="Logo.png" alt="" /></div>
     <div class="container">
       <div class="info-section">
+        <img src="Logo.png" alt="logo" />
         <h1>For Individuals</h1>
         <p>
           Start benefiting from the wellness experience. For companies focusing
