--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="info-section">
         <img src="Logo.png" alt="logo" />
         <h1>For Individuals</h1>
-        <p>
+        <p class="start">
           Start benefiting from the wellness experience. For companies focusing
           on increasing productivity and improving organization wellness.
         </p>
